use the JDK's HTTP connect instead of netty for the OCSP benchmark test